[gd_scene load_steps=4 format=3 uid="uid://bvt84sb5pt4ev"]

[ext_resource type="Script" path="res://GUI.gd" id="1_qiqvp"]
[ext_resource type="Script" path="res://BitBoard.cs" id="2_wa6xc"]
[ext_resource type="Script" path="res://DataHandler.cs" id="3_2esaq"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qiqvp")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Board" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -320.0
offset_right = 320.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.419608, 0.419608, 0.419608, 1)

[node name="BoardGrid" type="GridContainer" parent="Board"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -320.0
offset_right = 320.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 10

[node name="TestBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 931.0
offset_top = 33.0
offset_right = 1124.0
offset_bottom = 107.0
action_mode = 0
text = "Test"

[node name="TurnTracker" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 918.0
offset_top = 270.0
offset_right = 1112.0
offset_bottom = 310.0

[node name="Actions" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 921.0
offset_top = 312.0
offset_right = 1107.0
offset_bottom = 352.0

[node name="BitBoard" type="Node" parent="."]
script = ExtResource("2_wa6xc")

[node name="DataHandler" type="Node" parent="."]
script = ExtResource("3_2esaq")

[connection signal="pressed" from="TestBtn" to="." method="_on_test_btn_pressed"]
